--- a/style.css
+++ b/style.css
@@ -9,6 +9,11 @@ body {
 .color-green {
     color: #00abae;
 }
+
+.sub-title {
+    font-size: 32px;
+}
+
 /* headerのスタイルシート */
 
 .block-header {
@@ -22,4 +27,50 @@ body {
     color: #000;
     text-decoration: none;
     letter-spacing:1px
+}
+
+/* mainのスタイルシート */
+.block-main {
+    text-align: center;
+    margin: 100px 0;
+}
+
+/* profileのスタイルシート */
+.item-list {
+    width: 100%;
+    max-width: 348px;
+    margin:  0 auto;
+}
+
+.item-list b {
+    display: block;
+    font-size: 24px;
+    font-weight: normal;
+    margin: 20px 0 30px;
+}
+
+.item-list p {
+    font-size: 15px;
+    line-height: normal;
+    text-align: left;
+    width: 400px;
+}
+
+.icon-list {
+    list-style: none;
+    width: 50px;
+    max-width: 247px;
+    margin: 30px auto;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.icon-list li {
+    margin-right: 22px;
+}
+
+.icon-list li:last-child {
+    margin-right: 0;
 }
